--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div class="container">
+        <h1 class="text-center">Todo</h1>
         <div class="row">
             <div class="col-lg-2"></div>
             <div class="col-lg-8">
@@ -26,15 +27,6 @@
             </div>
             <div class="col-lg-2"></div>
         </div>
-        <div class="row">
-            <div class="col-lg-2"></div>
-            <div class="col-lg-8">
-                <ul class="list-group" id="display">
-
-                </ul>
-            </div>
-            <div class="col-lg-2"></div>
-        </div>
         <br>
         <div class="row">
             <div class="col-lg-2"></div>
@@ -45,7 +37,15 @@
             </div>
             <div class="col-lg-2"></div>
         </div>
+        <div class="row">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-8">
+                <ul class="list-group" id="display">
 
+                </ul>
+            </div>
+            <div class="col-lg-2"></div>
+        </div>
     </div>
 
     <!-- Optional JavaScript -->
