--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container">
-        <h1 class="text-center">Todo</h1>
+        <h1 class="text-center mt-5"> 📝 Todo List</h1>
         <div class="row">
             <div class="col-lg-2"></div>
             <div class="col-lg-8">
@@ -20,7 +20,9 @@
                     <div class="form-group">
                         <label for="todo">Todo</label>
                         <input type="text" class="form-control" id="todoUserInput" placeholder="Todo">
-                        <button type="submit" class="btn btn-primary">Create</button>
+                          <div class="text-center m-5">
+                            <button type="submit" class="btn btn-primary">Create</button>
+                          </div>
                     </div>
 
                 </form>
